# mastering-cmake

./: .gitignore
helloworld/: CMakeLists.txt
helloworld/src/: helloworld.cpp
